# llmcost

./: .gitignore  LICENSE  main.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
llm_cost/: __init__.py  calculator.py  cli.py  data_loader.py  display.py
llm_cost/data/: __init__.py  prices.yaml
llm_prices/: __init__.py  calculator.py  cli.py  data_loader.py  display.py
llm_prices/data/: __init__.py
tests/: test_calculator.py  test_cli.py  test_data_loader.py  test_display.py
