[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-prices"
version = "1.0.0"
description = "Compare LLM API prices across providers from the command line"
readme = "readme.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "madeburo" }
]
keywords = ["llm", "prices", "api", "cost", "calculator", "comparison"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "tiktoken>=0.7.0",
]
tiktoken = [
    "tiktoken>=0.7.0",
]

[project.scripts]
llm-prices = "llm_prices.cli:run"

[project.urls]
"Bug Reports" = "https://github.com/madeburo/llmcost/issues"
Source = "https://github.com/madeburo/llmcost"

[tool.setuptools.packages.find]
include = ["llm_prices*"]

[tool.setuptools.package-data]
"llm_prices.data" = ["prices.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
